--- a/app/ListScreen/ListScreen.css
+++ b/app/ListScreen/ListScreen.css
@@ -17,12 +17,24 @@ h1 {
   text-align: center;
 }
 
-figure {
-  float: left;
+h2 {
+  margin-left: 25px;
+  display: inline;
 }
 
-a:hover, a:link, a:visited, a:active {
-  text-decoration: none;
+time {
+  margin-left: 20px;
+}
+
+img {
+  float: left;
+  border-radius: 10px;
+}
+
+
+
+ol {
+  overflow: hidden;
 }
 
 
@@ -42,21 +54,24 @@ a:hover, a:link, a:visited, a:active {
 }
 
 .questionList {
-  position: relative;
 }
 
 .question {
   background-color: #07738F;
   border-radius: 10px;
-  color: white;
   font-family: 'Open Sans', sans-serif;
   position: relative;
   left: 10px;
   right: 10px;
-  padding: 5px;
+  padding: 30px;
   margin: 10px;
+  list-style-type: none;
 }
 
+.questionLinks:hover, .questionLinks:link, .questionLinks:visited, .questionLinks:active {
+  color: white;
+  text-decoration: none;
+}
 
 .question:hover {
   background-color: #0CCAF1;
