--- a/app/LoadingScreen/LoadingScreen.css
+++ b/app/LoadingScreen/LoadingScreen.css
@@ -1,11 +1,10 @@
+.wrapper {
+  text-align: center;
+}
 
-button {
+.retryButton {
   position: absolute;
   top: 50%;
   height: 100px;
   width: 150px;
-}
-
-.wrapper {
-  text-align: center;
 }
